Fixed scrollbar css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,7 +54,7 @@
   scrollbar-width: none;
 }
 
-#content:-webkit-scrollbar {
+#content::-webkit-scrollbar {
   display: none;
 }
 
